--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ dataset/LJSpeech-1.1.tar.bz2
 dataset/tmp/
 dataset/training_data/
 dataset/biaobei/
+dataset/biaobei_backup/
 dataset/training_procedure
 patch.diff
 test.s16
