--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ step*.wav
 
 LPCNet/features.f32
 LPCNet/data.u8
+LPCNet/final.pcm
 
 LPCNet/src/*.o
 LPCNet/test_lpcnet
@@ -47,6 +48,3 @@ dataset/training_procedure
 patch.diff
 test.s16
 test.wav
-LPCNet/features.f32
-LPCNet/data.u8
-LPCNet/data.u8
