--- a/c_tools/CMakeLists.txt
+++ b/c_tools/CMakeLists.txt
@@ -11,3 +11,4 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)
 
 # 包含子项目。
 add_subdirectory ("src")
+add_subdirectory ("posix_ipc")
