--- a/c_tools/CMakeLists.txt
+++ b/c_tools/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/debug)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)
 
 # 包含子项目。
-add_subdirectory ("src")
-# add_subdirectory("lpcnet_infer")
+# add_subdirectory ("src")
+add_subdirectory("lpctron_infer")
 # add_subdirectory ("posix_ipc")
 # add_subdirectory(thirdparty)
