--- a/c_tools/lpctron_infer/CMakeLists.txt
+++ b/c_tools/lpctron_infer/CMakeLists.txt
@@ -7,7 +7,7 @@ set(LPCNET_INFER3_FILES lpcnet_infer3.cpp lpcnet.cpp nnet.cpp nnet_data.c freq.c
 
 add_executable(lpcnet_infer3 ${LPCNET_INFER3_FILES})
 
-add_executable(test_json test_json.cpp)
+# add_executable(test_json test_json.cpp)
 
 target_compile_definitions(lpcnet_infer3 PRIVATE __AVX__=1)
 
@@ -21,6 +21,6 @@ target_link_libraries(lpcnet_infer3 m)
 
 target_compile_features(lpcnet_infer3 PUBLIC cxx_std_11)
 
-target_compile_features(test_json PUBLIC cxx_std_11)
-target_include_directories(test_json PUBLIC ../thirdparty/nlohmann_json/include)
+# target_compile_features(test_json PUBLIC cxx_std_11)
+# target_include_directories(test_json PUBLIC ../thirdparty/nlohmann_json/include)
 
