--- a/c_tools/lpctron_infer/CMakeLists.txt
+++ b/c_tools/lpctron_infer/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.8)
 
 project(lpcnet_infer CXX)
+link_directories(../tensorflow-1.15.0/lib)
 
 set(LPCNET_INFER3_FILES lpcnet_infer3.cpp lpcnet.cpp nnet.cpp nnet_data.c freq.cpp
         kiss_fft.c pitch.cpp celt_lpc.cpp vec_avx.h)
 
+set(MINI_MODEL_FILES mini_model.cpp TFUtils.cpp)
+
 add_executable(lpcnet_infer3 ${LPCNET_INFER3_FILES})
+
+add_executable(mini_model ${MINI_MODEL_FILES})
+
 
 # add_executable(test_json test_json.cpp)
 
@@ -20,7 +26,12 @@ target_compile_options(lpcnet_infer3
 target_link_libraries(lpcnet_infer3 m)
 
 target_compile_features(lpcnet_infer3 PUBLIC cxx_std_11)
+target_compile_features(mini_model PUBLIC cxx_std_11)
+
 
 # target_compile_features(test_json PUBLIC cxx_std_11)
 # target_include_directories(test_json PUBLIC ../thirdparty/nlohmann_json/include)
 
+
+target_include_directories(mini_model PUBLIC ../tensorflow-1.15.0/include)
+target_link_libraries(mini_model tensorflow)
