--- a/c_tools/lpctron_infer/CMakeLists.txt
+++ b/c_tools/lpctron_infer/CMakeLists.txt
@@ -12,7 +12,8 @@ add_executable(lpcnet_infer3 ${LPCNET_INFER3_FILES})
 
 # add_executable(mini_model ${MINI_MODEL_FILES})
 
-add_executable(taco_infer_cpp taco_infer_cpp.cpp tf_utils.cpp tf_diagnosis.cpp)
+add_executable(taco_infer_cpp_2 taco_infer_cpp_2.cpp)
+add_executable(taco_infer_cpp_0 taco_infer_cpp_0.cpp TFUtils.cpp tf_utils.cpp tf_diagnosis.cpp)
 
 # add_executable(test_json test_json.cpp)
 
@@ -28,7 +29,8 @@ target_link_libraries(lpcnet_infer3 m)
 
 target_compile_features(lpcnet_infer3 PUBLIC cxx_std_11)
 #target_compile_features(mini_model PUBLIC cxx_std_11)
-target_compile_features(taco_infer_cpp PUBLIC cxx_std_11)
+target_compile_features(taco_infer_cpp_0 PUBLIC cxx_std_11)
+target_compile_features(taco_infer_cpp_2 PUBLIC cxx_std_11)
 
 # target_compile_features(test_json PUBLIC cxx_std_11)
 # target_include_directories(test_json PUBLIC ../thirdparty/nlohmann_json/include)
@@ -36,6 +38,8 @@ target_compile_features(taco_infer_cpp PUBLIC cxx_std_11)
 # target_include_directories(mini_model PUBLIC ../tensorflow-1.15.0/include)
 # target_link_libraries(mini_model tensorflow)
 
-target_include_directories(taco_infer_cpp PUBLIC ../tensorflow-1.15.0/include)
-target_link_libraries(taco_infer_cpp tensorflow)
+target_include_directories(taco_infer_cpp_0 PUBLIC ../tensorflow-1.15.0/include)
+target_link_libraries(taco_infer_cpp_0 tensorflow)
 
+# target_include_directories(taco_infer_cpp_2 PUBLIC ../tensorflow-1.15.0/include)
+target_link_libraries(taco_infer_cpp_2 tensorflow)
