--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ tacotron_model/tacotron.pb
 inference_model.pb
 
 c_tools/thirdparty/
-c_tools/tf_c_api_1.15.0/
+c_tools/tf_c_api-1.15.0/lib/
 c_tools/tensorflow-1.15.0/
 c_tools/build/
 c_tools/cmake-build-release/
