--- a/infer_grpc/backend_infer/CMakeLists.txt
+++ b/infer_grpc/backend_infer/CMakeLists.txt
@@ -9,5 +9,14 @@ set(CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/bin")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/debug)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/release)
 
-add_executable(dummy_backend dummy_backend.cpp)
+set(CMAKE_CXX_STANDARD 11)
 
+# link_directories(../tf_c_api-1.15.0/lib)
+# include_directories(../tf_c_api-1.15.0/include)
+
+link_directories(/usr/local/lib)
+include_directories(/usr/local/include)
+
+add_executable(dummy_backend dummy_backend.cpp  backend_infer.pb.cc backend_infer.grpc.pb.cc)
+
+target_link_libraries(dummy_backend protobuf grpc grpc++)
