--- a/infer_socket/backend/CMakeLists.txt
+++ b/infer_socket/backend/CMakeLists.txt
@@ -15,5 +15,5 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
 add_executable(backend_server backend_server2.cpp)
 set_target_properties(backend_server PROPERTIES CXX_STANDARD 14)
 
-target_link_libraries(backend_server event event_core)
-#        libevent_extra libevent_pthreads)
+target_link_libraries(backend_server event event_core event_pthreads event_extra
+        boost_thread boost_system boost_chrono)
