--- a/infer_socket/backend/CMakeLists.txt
+++ b/infer_socket/backend/CMakeLists.txt
@@ -12,8 +12,21 @@ set(CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/bin")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR})
 
-add_executable(backend_server backend_server2.cpp)
+add_executable(backend_server backend_server2.cpp
+        BackendImp.cpp TFUtils.cpp
+        nnet_data.cpp lpcnet.cpp nnet.cpp  freq.cpp
+        kiss_fft.cpp pitch.cpp celt_lpc.cpp vec_avx.h)
 set_target_properties(backend_server PROPERTIES CXX_STANDARD 14)
 
-target_link_libraries(backend_server event event_core event_pthreads event_extra
-        boost_thread boost_system boost_chrono)
+
+target_compile_definitions(backend_server PRIVATE __AVX__=1 TACOTRON2=1)
+
+target_compile_options(backend_server
+        PRIVATE "-mavx2"
+        PRIVATE "-mfma"
+        PRIVATE "-mavx"
+        PRIVATE "-mf16c")
+
+target_link_libraries(backend_server tensorflow samplerate
+        event event_core event_pthreads event_extra
+        boost_thread  boost_chrono-mt)
